tdf#113530 LibreOffice hangs when pasting a few columns

regression from

    commit d6fb5ca5661195520ca7a7ca2d0145a1e11be099
    dyncolcontainer: use ScCompressedArray for pColWidth

Change-Id: I3d8b71e7df581346d4a52204cb1230fb80c6e8bb